--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,31 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Transport Pasageri Chișinău - Cluj Napoca</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-20526344-139"></script>
+    <script>
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      window.dataLayer = window.dataLayer || [], gtag("js", new Date), gtag("config", "UA-20526344-139")
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      ! function(e, t, n, c, o, a, f) {
+        e.fbq || (o = e.fbq = function() {
+          o.callMethod ? o.callMethod.apply(o, arguments) : o.queue.push(arguments)
+        }, e._fbq || (e._fbq = o), o.push = o, o.loaded = !0, o.version = "2.0", o.queue = [], (a = t.createElement(n)).async = !0, a.src = "https://connect.facebook.net/en_US/fbevents.js", (f = t.getElementsByTagName(n)[0]).parentNode.insertBefore(a, f))
+      }(window, document, "script"), fbq("init", "2126104487526785"), fbq("track", "PageView")
+    </script><noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=2126104487526785&ev=PageView&noscript=1" /></noscript>
+    <script>
+      ! function(t, e, n) {
+        var c, s = t.getElementsByTagName(e)[0];
+        t.getElementById(n) || ((c = t.createElement(e)).id = n, c.src = "https://contactus.nikba.com/contactus.min.js?v=1.92", s.parentNode.insertBefore(c, s))
+      }(document, "script", "contactus-sdk")
+    </script>
+    <div id="contactus" call="+37368600100" call-label="Sună acum!" viber="37368600100" viber-label="Scrie pe Viber" whatsapp="+37368600100" whatsapp-label="Scrie pe WhatsApp" facebook="transport.chisinau.cluj.napoca" facebook-label="Scrie pe Facebook" telegram="" telegram-label="" title="Doriți să faceți o rezervare?" position=""></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
